Loader element added to views.

--- a/dev/views/applyNow.html
+++ b/dev/views/applyNow.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/applyNow.css">
     <link rel="stylesheet" href="../styles/customFileInput.css">
     <link rel="stylesheet" href="../styles/customFileUploadComponent.css">
+    <link rel="stylesheet" href="../styles/loaderElement.css">
 </head>
 
 <body>
@@ -170,6 +171,9 @@
                                 <!-- <button class="green-btn">Upload</button> -->
                             
                             </div>
+                        </div>
+                        <div class="loader-container">
+                            <span class="loader"></span>
                         </div>
                         <div class="form-btn">
                             <button class="red-btn" type="submit">Apply</button>
