--- a/dev/views/login.html
+++ b/dev/views/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/core.css">
     <link rel="stylesheet" href="../styles/navDropdown.css">
     <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/loaderElement.css">
 </head>
 
 <body>
@@ -83,6 +84,9 @@
                             </div>
                             
                         </div>
+                    </div>
+                    <div class="loader-container">
+                        <span class="loader"></span>
                     </div>
                     <div class="form-btn">
                         <button class="red-btn" type="submit">Log In</button>
