--- a/dev/views/register.html
+++ b/dev/views/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/register.css">
     <link rel="stylesheet" href="../styles/customFileInput.css">
     <link rel="stylesheet" href="../styles/customFileUploadComponent.css">
+    <link rel="stylesheet" href="../styles/loaderElement.css">
 </head>
 
 <body>
@@ -173,6 +174,9 @@
                                 <span></span>
                             </div>
                         </div>
+                    </div>
+                    <div class="loader-container">
+                        <span class="loader"></span>
                     </div>
                     <div class="form-btn">
                         <button class="red-btn" type="submit">Register</button>
