--- a/src/app/core/main/main.component.html
+++ b/src/app/core/main/main.component.html
@@ -1,31 +1,3 @@
 <main>
-    <p>Main element. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi velit et nemo facere
-        praesentium quae recusandae numquam odio, distinctio ullam, non nulla nobis molestiae. Illum deleniti,
-        soluta dolores dolor nesciunt pariatur earum eveniet aut ea ratione veniam qui, aperiam possimus
-        nostrum. Recusandae mollitia et veniam nostrum voluptas perspiciatis, nulla vitae iusto eligendi at ex
-        tenetur vero vel tempore, delectus ducimus aspernatur nemo sunt animi id officiis dignissimos. Quisquam
-        culpa sapiente rem laborum, velit hic mollitia repudiandae tenetur quasi reiciendis nulla quibusdam at
-        nihil sunt aut officiis praesentium voluptates quia? Corrupti perferendis esse culpa dicta omnis
-        reprehenderit quia eveniet doloremque laudantium veritatis maiores quaerat, similique, deserunt vitaeMain element. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi velit et nemo facere
-        praesentium quae recusandae numquam odio, distinctio ullam, non nulla nobis molestiae. Illum deleniti,
-        soluta dolores dolor nesciunt pariatur earum eveniet aut ea ratione veniam qui, aperiam possimus
-        nostrum. Recusandae mollitia et veniam nostrum voluptas perspiciatis, nulla vitae iusto eligendi at ex
-        tenetur vero vel tempore, delectus ducimus aspernatur nemo sunt animi id officiis dignissimos. Quisquam
-        culpa sapiente rem laborum, velit hic mollitia repudiandae tenetur quasi reiciendis nulla quibusdam at
-        nihil sunt aut officiis praesentium voluptates quia? Corrupti perferendis esse culpa dicta omnis
-        reprehenderit quia eveniet doloremque laudantium veritatis maiores quaerat, similique, deserunt vitaeMain element. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi velit et nemo facere
-        praesentium quae recusandae numquam odio, distinctio ullam, non nulla nobis molestiae. Illum deleniti,
-        soluta dolores dolor nesciunt pariatur earum eveniet aut ea ratione veniam qui, aperiam possimus
-        nostrum. Recusandae mollitia et veniam nostrum voluptas perspiciatis, nulla vitae iusto eligendi at ex
-        tenetur vero vel tempore, delectus ducimus aspernatur nemo sunt animi id officiis dignissimos. Quisquam
-        culpa sapiente rem laborum, velit hic mollitia repudiandae tenetur quasi reiciendis nulla quibusdam at
-        nihil sunt aut officiis praesentium voluptates quia? Corrupti perferendis esse culpa dicta omnis
-        reprehenderit quia eveniet doloremque laudantium veritatis maiores quaerat, similique, deserunt vitaeMain element. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi velit et nemo facere
-        praesentium quae recusandae numquam odio, distinctio ullam, non nulla nobis molestiae. Illum deleniti,
-        soluta dolores dolor nesciunt pariatur earum eveniet aut ea ratione veniam qui, aperiam possimus
-        nostrum. Recusandae mollitia et veniam nostrum voluptas perspiciatis, nulla vitae iusto eligendi at ex
-        tenetur vero vel tempore, delectus ducimus aspernatur nemo sunt animi id officiis dignissimos. Quisquam
-        culpa sapiente rem laborum, velit hic mollitia repudiandae tenetur quasi reiciendis nulla quibusdam at
-        nihil sunt aut officiis praesentium voluptates quia? Corrupti perferendis esse culpa dicta omnis
-        reprehenderit quia eveniet doloremque laudantium veritatis maiores quaerat, similique, deserunt vitae</p>
+    <router-outlet></router-outlet>
 </main>
