--- a/src/app/core/main/main.component.css
+++ b/src/app/core/main/main.component.css
@@ -1,3 +1,8 @@
+:host {
+    display: flex;
+    overflow-y: auto;
+}
+
 main {
     background-color: var(--background-gray);
     padding: 1vh 1vw;
