routerLink added to anchors

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -50,7 +50,7 @@
     </form>
 
     <span class="mandatory-fieds-msg">Mandatory<i>*</i> fields.</span>
-    <span class="no-acc-msg">No account? <a href="#">Register</a> or <a href="#">apply</a> to become
+    <span class="no-acc-msg">No account? <a routerLink="/register">Register</a> or <a routerLink="/apply-now">apply</a> to become
         a student.</span>
 
 </div>
