--- a/src/app/account/login/login.component.css
+++ b/src/app/account/login/login.component.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    padding: 30px 0;
+    padding-bottom: 10px;
     box-shadow: var(--component-box-shadow);
 }
 
