--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="#">Student Grades</a></li>
                         <li><a href="#">My Profile</a></li>
-                        <li class="logout-active"><a href="#">Logout</a></li>
+                        <li class="logout-active"><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </nav>
             </div>
@@ -49,7 +49,7 @@
                             </div>
                         </li>
                         <li><a href="#">My Profile</a></li>
-                        <li class="logout-active"><a href="#">Logout</a></li>
+                        <li class="logout-active"><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </nav>
             </div>
@@ -68,7 +68,7 @@
                         </li>
                         <li><a href="#">My Grades</a></li>
                         <li><a href="#">My Profile</a></li>
-                        <li class="logout-active"><a href="#">Logout</a></li>
+                        <li class="logout-active"><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </nav>
             </div>
