Anchor tags href updated.

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -58,7 +58,7 @@
     </form>
 
     <span class="mandatory-fieds-msg">Mandatory<i>*</i> fields.</span>
-    <span class="no-acc-msg">No account? <a routerLink="/register">Register</a> or <a routerLink="/apply-now">apply</a>
+    <span class="no-acc-msg">No account? <a href="javascript:void(0)" routerLink="/register">Register</a> or <a href="javascript:void(0)" routerLink="/apply-now">apply</a>
         to become
         a student.</span>
 
